Bug Fix: Followers stats alignment

--- a/public/stylesheets/multitask/general.css
+++ b/public/stylesheets/multitask/general.css
@@ -2,6 +2,8 @@
 
 .clear { clear:both; }
 
+.no_padding_top { padding-top: 0 !important;}
+
 /* contenido */
 .contenido{background:url(/images/multitask/fondos/bubbles_interior.jpg) no-repeat center top;overflow:hidden;}
 #home .contenido{background:url(/images/multitask/fondos/bubbles.jpg) no-repeat center top #fff;overflow:hidden;}
